--- a/cuahangvp/src/App.css
+++ b/cuahangvp/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
+/* App.css */
+html, body {
+  height: 100%;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 100vh; /* Đảm bảo chiều cao tối thiểu là chiều cao của viewport */
 }
 
-.App-link {
-  color: #61dafb;
+.main-content {
+  flex: 1; /* Làm cho phần nội dung chính co giãn để chiếm không gian còn lại */
+  padding: 20px; /* Khoảng cách bên trong */
+  background-color: #f4f4f4; /* Màu nền cho nội dung chính */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer {
+  margin: 0;
 }
