--- a/cuahangvp/src/components/Home/Home.css
+++ b/cuahangvp/src/components/Home/Home.css
@@ -146,3 +146,17 @@ button {
 button:hover {
   background-color: #218838; /* Màu nền khi rê chuột vào nút mua ngay */
 }
+
+.alert {
+  position: fixed;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px 20px;
+  background-color: #d4edda;
+  color: #155724;
+  border: 1px solid #c3e6cb;
+  border-radius: 5px;
+  z-index: 1000;
+  transition: opacity 0.5s ease-in-out;
+}
